smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/unions-do-not-support-defaults.smithy
// Syntax error at line 7, column 17: Expected IDENTIFIER but found EQUAL('=') | Model
$version: "2.0"

namespace com.foo

union Foo {
    bar: String = "hi"
}
